@startuml
'https://plantuml.com/class-diagram
hide empty methods
hide empty attributes
skinparam classAttributeIconSize 0

class TrafficManager{
    -name
}

class Company{}

class Ship {
    -mmmsi /'MMSI - 1'/
    -imo /'IMO - 9'/
    -callSign /'CallSign - 10'/
    -shipName /'VesselName - 8'/
    -draft /'Draft - 14'/
    '-shipPositions /'BST que guarda Positions'/
    '-vesselType /'objeto do tipo VesselType'/
}

class VesselType{
    -vesselTypeID /'VesselType - 11'/
    -length /'Length - 12'/
    -width /'Width - 13'/
    -maxCapacity /'Cargo - 15'/
}

class ShipPosition {
    -baseDateTime /'BaseDateTime - 2'/
    -latitude /'LAT - 3'/
    -longitude /'LON - 4'/
    -sog /'SOG - 5'/
    -cog /'COG - 6'/
    -heading /'Heading - 7'/
    -transceiver /'TransceiverClass - 16'/
}

Company "1" -- "1..*" VesselType : owns >
Ship "1..*" -- "1" VesselType : is of >
TrafficManager "1" -- "1..*" Ship : imports >
Ship "1" -- "1..*" ShipPosition : has >
Company "1" -- "1..*" Ship : manages >

@enduml